# warden-worker

./: Cargo.toml  README.md  wrangler.toml
.github/workflows/: push-cloudflare.yaml
sql/: schema.sql
src/: auth.rs  crypto.rs  lib.rs  router.rs
src/handlers/: accounts.rs  ciphers.rs  devices.rs  identity.rs  mod.rs  sync.rs
src/models/: cipher.rs  device.rs  folder.rs  mod.rs  sync.rs
