[package]
name = "warden-worker"
version = "0.1.0"
edition = "2021"
authors = ["deepubuntu"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'axum'] }
worker-macros = { version = "0.6", features = ['http'] }
axum = { version = "0.8", default-features = false }
tower-service = "0.3.3"
console_error_panic_hook = "0.1.7"
